Simplify vercel.json for static site

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,4 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/impressum.html",
-      "dest": "/impressum.html"
-    },
-    {
-      "src": "/(.*\\.(js|css|json))",
-      "dest": "/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "version": 2
 }
 
